Bug 5426 - Unnecessary memory allocation for CreateField should be eliminated
Summary: Unnecessary memory allocation for CreateField should be eliminated
Status: CLOSED PATCH_ALREADY_AVAILABLE
Alias: None
Product: ACPI
Classification: Unclassified
Component: ACPICA-Core (show other bugs)
Hardware: i386 Linux
: P2 normal
Assignee: Valery A Podrezov
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2005-10-12 10:31 UTC by Valery A Podrezov
Modified: 2006-09-28 13:17 UTC (History)
1 user (show)

See Also:
Kernel Version: 2.6
Subsystem:
Regression: ---
Bisected commit-id:


Attachments
ASL code applying CreateField operator. (857 bytes, text/plain)
2005-10-12 10:33 UTC, Valery A Podrezov
Details
Bug-fixing patch (780 bytes, patch)
2005-12-02 04:52 UTC, Valery A Podrezov
Details | Diff

Description Valery A Podrezov 2005-10-12 10:31:48 UTC
Most recent kernel where this bug did not occur:
Distribution:
Hardware Environment:
Software Environment:
Problem Description:

The "memory leak" bug.
The issue has been revealed by PMEMCV, is not seen by OAS (see bug 5422).
Investigation shows that the Linux kernel ACPI interpreter
allocates Result-structure for processing CreateField() ASL
operator, but doesn't use it anyhow. Unnecessary memory
allocation should be eliminated.

Steps to reproduce:

Doesn't require.
Comment 1 Valery A Podrezov 2005-10-12 10:33:06 UTC
Created attachment 6290 [details]
ASL code applying CreateField operator.

The attached demo program applies in different manner
the CreateField operator.

INTERNAL BUG NUMBER

   165
Comment 2 Valery A Podrezov 2005-12-02 04:52:03 UTC
Created attachment 6749 [details]
Bug-fixing patch

The update was tested by the ASLTS test suite runs
(all the test cases) on the following systems:
- CYGWIN_NT-5.1 1.5.18(0.132/4/2) 2005-07-02 20:30 i686 unknown unknown Cygwin
- Linux 2.6.5-7.191-smp #1 SMP Tue Jun 28 14:58:56 UTC 2005 i686 i686 i386
GNU/Linux
for the following (all) modes supported by the ASLTS test suite:
- 32-bit norm mode
- 64-bit norm mode
- 32-bit slack mode
- 32-bit slack mode

The tests were run (on the systems described above) before update,
then the tests were run on those systems after update. Then results
of two runs were compared. All is Ok (no new errors).
Comment 3 Robert Moore 2006-05-18 14:23:02 UTC
This was integrated in ACPICA version 20060113
Comment 4 Robert Moore 2006-07-07 13:51:12 UTC
Integrated generic fix for all CreateXxxxField operators in ACPICA version 
20060707
Comment 5 Len Brown 2006-07-25 09:57:13 UTC
ACPICA 20060707 shipped in Linux-2.6.18-rc2

closed.

Note You need to log in before you can comment on or make changes to this bug.